fix: Incorrect URLClassLoader initialization when url is a directory